--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                       <div id="wrapper"></div>
                       <div id="error"></div>
                     </div>
+                    <h2 class="text-end mt-4">Developed By Prothes</h2>
                 </div>
             </div>
         </div>
